# PeakBagger

./: .gitignore  ALPINEExplorer.ipynb  ALPINEExplorer.qmd  Data.toml  Dockerfile  LICENSE  Manifest.toml  Project.toml  README.md  peakbagger.qmd  pyproject.toml
.github/workflows/: CI.yml
alpineexplorer/: __init__.py  main.py
docs/: Project.toml  index.html  make.jl  search.js
docs/alpineexplorer/: main.html
docs/src/: index.md
peakbagger/: main.py
src/: ALPINEExplorer.jl
test/: runtests.jl
