[tool.poetry]
name = "alpineexplorer"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
polars = "^0.19.9"
result = "^0.13.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pyarrow = "^13.0.0"
black = "^23.10.0"
pdoc = "^14.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
