[tool.poetry]
name = "alpineexplorer"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
readme = "README.md"
repository = "https://github.com/nrminor/ALPINEExplorer"
keywords = ["data visualization", "data analysis", "data science"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
polars = "^0.19.9"
result = "^0.13.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
pyarrow = "^13.0.0"
black = "^23.10.0"
pdoc = "^14.1.0"
nbformat = "^5.9.2"
pandas = "^2.1.1"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
xlsxwriter = "^3.1.9"
geopandas = "^0.14.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
